Limit history collection to 4 months by default

This solves two problems:
1. Really old data is likely not very useful, as people's usages and
   projects change over time.
2. Keeping all data forever causes the database to become unbounded in
   size, which will eventually cause performance issues.

BUG: 500180
FIXED-IN: 6.4.0